--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,20 @@
 [package]
-name = "elrond-nft-simple-sc"
+name = "elrond-nftmanager"
 version = "0.0.0"
 authors = [ "Ice <icegriffin1122@gmail.com>",]
 edition = "2018"
 publish = false
 
 [lib]
-path = "src/nft-simple-manager.rs"
+path = "src/nft_manager.rs"
 
 [dependencies.elrond-wasm]
 version = "0.27.4"
 
 [dev-dependencies.elrond-wasm-debug]
 version = "0.27.4"
+
+[dev-dependencies]
+num-bigint = "0.4.2"
+num-traits = "0.2"
+hex = "0.4"
